--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"mysql2": "^3.14.1",
 		"node-fetch": "^3.3.2",
 		"nodemon": "^3.1.9",
+		"tesseract.js": "^6.0.1",
 		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
